# devdy

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
docs/: mcp-central-management-plan.md  per-project-git-account-plan.md  srs-codex-credential-broker.md  srs-gitlab-fetch.md  usage-status-flow.md
landing/: en.html  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_repos.sql  0003_input_path.sql  0004_session_id.sql  0005_rules.sql  0006_skills_codex.sql  0007_project_has_pat.sql  0008_run_title.sql  0009_github_accounts.sql  0010_run_usage.sql  0011_session_sync.sql  0012_deleted_sessions.sql  0013_run_pinned.sql  0014_gitlab_accounts.sql  0015_account_email.sql  0016_mcp_servers.sql  0017_repos_provider.sql  0018_servers.sql  0019_project_servers.sql  0020_deploy.sql  0021_drop_deploy.sql  0022_aws_accounts.sql  0023_projects_aws_account.sql
src-tauri/src/: db.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/commands/: agents_block.rs  aws_accounts.rs  codex_sessions.rs  deployments.rs  files.rs  github.rs  github_accounts.rs  gitlab_accounts.rs  health.rs  mcp.rs  mod.rs  notifications.rs  projects.rs  rules.rs  runs.rs  sessions.rs  settings.rs  skills.rs  stats.rs  storage.rs  vps_servers.rs  work_digest.rs  work_summary.rs
src-tauri/src/github/: mod.rs
src-tauri/src/gitlab/: mod.rs
src-tauri/src/runs/: mod.rs  permission.rs  pricing.rs  session_watcher.rs  sidecar.rs  ssh_access.rs
src-tauri/src/runs/broker/: approver.rs  audit.rs  mod.rs  policy.rs  token.rs
(+103 files in other folders)
