[package]
name = "devdy"
version = "0.4.0"
description = "AI coding agent for developers"
authors = ["thainph"]
edition = "2021"

[lib]
name = "devdy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
notify-rust = "4"
zip = "2"
walkdir = "2"
ignore = "0.4"
octocrab = { version = "0.44", default-features = false, features = ["default-client", "rustls", "rustls-ring", "rustls-webpki-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
# Process-group SIGKILL on app exit / cancel, so sidecar + CLI children don't
# linger and burn API tokens after the app closes.
libc = "0.2"
